force-app/main/default/objects/Booking__c/Booking__c.object-meta.xml
<CustomObject>
    <label>Booking</label>
    <nameField>
        <displayFormat>BK-{0000}</displayFormat>
        <label>Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>