force-app/main/default/objects/Booking__c/fields/Days_Until_Departure__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Departure__c</fullName>
    <formula>Flight__r.Departure_DateTime__c - NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Departure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>