force-app/main/default/objects/Booking__c/validationRules/Booking_Date_Must_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Booking_Date_Must_Be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Flight__r.Departure_DateTime__c &lt;= NOW()</errorConditionFormula>
    <errorDisplayField>Flight__c</errorDisplayField>
    <errorMessage>Departure must be a future date. Please select a flight with a future departure.</errorMessage>
</ValidationRule>