force-app/main/default/objects/Booking__c/validationRules/Cancellation_Requires_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Requires_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Booking_Status__c) &amp;&amp;
ISPICKVAL(Booking_Status__c,&quot;Cancelled&quot;) &amp;&amp;
ISBLANK(Cancellation_Reason__c)</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>A cancellation reason is required when cancelling a booking.</errorMessage>
</ValidationRule>