force-app/main/default/objects/Booking__c/validationRules/Seats_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Seats_Must_Be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Number_of_Seats__c &lt; 1</errorConditionFormula>
    <errorDisplayField>Number_of_Seats__c</errorDisplayField>
    <errorMessage>At least 1 seat is required.</errorMessage>
</ValidationRule>